# eternal-radio-player

./: .gitattributes  .gitignore  CHANGELOG.md  README.bg.md  README.md  build.spec  main.py  requirements.txt  setup.cfg
.github/workflows/: release.yml
eternal_radio_player/: __init__.py  _version.py  cli.py  config.py  constants.py  exceptions.py  i18n.py  player.py  stream.py  utils.py
eternal_radio_player/gui/: gui.py  logging_.py  widgets.py
resources/gui/: main-window.ui  resources.qrc  style.qss
resources/i18n/: bg.json  en.json
scripts/: build.cmd  build.sh  qt-compile.cmd  qt-compile.sh
