[metadata]
name = eternal-radio-player
version = attr: eternal_radio_player._version.__version__
description = A desktop app for the online radio station Eternal Radio
long_description = file: README.md
long_description_content_type = text/markdown
author = alexitx
author_email = alexander@alexitx.com
license = GPLv3+
license_files = LICENSE
url = https://github.com/alexitx/eternal-radio-player
project_urls =
    Bug Tracker = https://github.com/alexitx/eternal-radio-player/issues
    Source = https://github.com/alexitx/eternal-radio-player
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Win32 (MS Windows)
    Environment :: X11 Applications :: Qt
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Multimedia :: Sound/Audio :: Players
keywords =
    audio
    eternal radio
    http
    music
    online radio
    player
    radio
    stream

[options]
packages =
    eternal_radio_player
    eternal_radio_player.gui
    eternal_radio_player.gui.generated
python_requires = >=3.7
install_requires =
    miniaudio>=1.46
    numpy>=1.21.5
    platformdirs>=2.5.1
    requests>=2.27.1
    schema>=0.7.5
    sounddevice>=0.4.4
    timeago>=1.0.15

[options.extras_require]
    gui =
        pyqtdarktheme>=1.1.0
        PySide6>=6.2.3

[options.entry_points]
console_scripts =
    eternal-radio-player = eternal_radio_player.cli:main
gui_scripts =
    eternal-radio-player-gui = eternal_radio_player.cli:main
